# eth_warden

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  genesis.json  hardhat.config.ts  next.config.js  package-lock.json  package.json  remappings.txt  setup_dirs_and_rust.sh  shell.nix  tsconfig.json
.github/workflows/: nextjs.yml
circuits/: .gitignore  README  prove_decryption.circom  prove_encryption.circom
pages/: _app.tsx  index.tsx
public/: .gitignore  circuit_final.zkey  prove_decryption.wasm  prove_encryption.wasm  verification_key.json
scripts/: create-password-manager.ts
src/: Counter.sol  passwordManager.sol  verifier.sol
test/: Counter.t.sol  password_manager_test.ts
utils/: download-zkey.ts  zkutils.ts
wasm/: Cargo.toml  LICENSE_MIT
wasm/src/: lib.rs  utils.rs
wasm/tests/: node.rs
