[package]
name = "wasm"
version = "0.1.0"
authors = ["Akul Penugonda <akulvp@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
pbkdf2 = { version = "0.11", features = ["default", "password-hash"] }
rand_core = { version = "0.6", features = ["std"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
getrandom = { version = "0.2", features = ["js"] }
aes-gcm-siv = "0.11.1"
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
console_log = "0.2.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
